# stm32-cmake-docker

./: .cproject  .gitignore  .mxproject  .project  .travis.yml  CMakeLists.txt  LICENSE  README.md  STM32F072RBTX_FLASH.ld  build.sh  docker-clean.bat  docker-compile.bat  stm32-docker-cmake Debug.launch  stm32-docker-cmake-Debug.launch  stm32-docker-cmake.ioc
.github/workflows/: build.yml
Docker/: Dockerfile  docker-clean.bat  docker-compile.bat
Inc/: main.h  stm32f0xx_hal_conf.h
Src/: main.c  stm32f0xx_hal_msp.c
