PROJECT(stm32-docker-cmake)

CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
ENABLE_LANGUAGE(ASM)

FIND_PACKAGE(CMSIS REQUIRED)
FIND_PACKAGE(STM32HAL REQUIRED)

# Use relative build path for debugging when building with Docker image
SET(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -fdebug-prefix-map=/home/stm32/ws/=")
SET(CMAKE_C_FLAGS  "${CMAKE_C_FLAGS} -fdebug-prefix-map=/home/stm32/ws/=")

INCLUDE_DIRECTORIES(

    ${CMSIS_INCLUDE_DIRS}
    ${STM32HAL_INCLUDE_DIR}
    Inc
    ${CMAKE_CURRENT_SOURCE_DIR}/lib/flatbuffers/include
)

SET(PROJECT_SOURCES
    Src/main.c
    Src/syscalls.c
    Src/sysmem.c
    Src/stm32f0xx_hal_msp.c
    Src/stm32f0xx_it.c
)

SET(STM32_LINKER_SCRIPT STM32F072RBTX_FLASH.ld)

ADD_EXECUTABLE(${CMAKE_PROJECT_NAME}.elf ${PROJECT_SOURCES} ${CMSIS_SOURCES} ${STM32HAL_SOURCES})

STM32_SET_TARGET_PROPERTIES(${CMAKE_PROJECT_NAME}.elf)
STM32_ADD_HEX_BIN_TARGETS(${CMAKE_PROJECT_NAME}.elf)
STM32_PRINT_SIZE_OF_TARGETS(${CMAKE_PROJECT_NAME}.elf)
